Solved x-overflow issues

--- a/css/certification.css
+++ b/css/certification.css
@@ -5,7 +5,7 @@
     justify-content: center;
     gap: 20px;
     margin: 10px;
-    width: 100%;
+    width: calc(100% - 10px);
 }
 
 #certification-introduction {
