--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,7 @@
 #header {
     border-bottom: 1px solid #cccccc;
     font-size: 20px;
-    width: 100vw;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: flex-start;
